--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -15,8 +15,7 @@ body::before {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: #f8f8f8;
-    background: url(../img/grid.png) repeat-x;
+    background-color: white;
     will-change: transform;
     z-index: -1;
 }
@@ -224,7 +223,7 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 }
 
 .admonition.note { /* csslint allow: adjoining-classes */
-    color: #3a87ad;
+    color: orangered;
     background-color: #d9edf7;
     border-color: #bce8f1;
 }
